# dg_tools

./: CMakeLists.txt  Doxyfile.in  README.md  package.xml  readme.md  setup.py
demos/: CMakeLists.txt  demo_dg_rotation.py  demo_filter.py  demo_rotation.py  demo_traj_generator.py
include/dg_tools/: create_world_frame.hpp  operator.hpp  se3_offset.hpp  utils.hpp
include/dg_tools/ComImpedanceControl/: ComImpedanceController.hpp  reactive_lqr_controller.hpp
include/dg_tools/com_impedance_control/: com_impedance_controller.hpp
include/dg_tools/control/: calibrator.hpp  control_pd.hpp
include/dg_tools/data/: history_recorder.hpp  memory_replay.hpp  previous_value.hpp  upsampler.hpp
include/dg_tools/test_stand_control/: power_jump.hpp
python/dg_tools/: __init__.py  filter.py  math_small_entities.py  sliders.py  traj_generators.py  utils.py
python/dg_tools/leg_impedance_control/: bolt_impedance_controller.py  leg_impedance_controller.py  quad_leg_impedance_controller.py  solo12_impedance_controller.py
python/leg_impedance_control/: leg_impedance_controller.py  quad_leg_impedance_controller.py  traj_generators.py  utils.py
python/py_dg_tools/: generate_traj.py  utils.py
scripts/: convert_dg_to_rai.py
src/: CMakeLists.txt  create_world_frame.cpp  operator.cpp  se3_offset.cpp  smooth-reach.cpp  utils.cpp
src/ComImpedanceControl/: ComImpedanceController.cpp  reactive_lqr_controller.cpp
src/com_impedance_control/: com_impedance_controller.cpp
src/control/: calibrator.cpp  control_pd.cpp
src/data/: history_recorder.cpp  memory_replay.cpp  previous_value.cpp  upsampler.cpp
src/test_stand_control/: power_jump.cpp
srcpy/: dg_tools_entities_dg_python_module.hpp
tests/: CMakeLists.txt  test_butterworth_filter.py  test_calibrator.py  test_create_world_frame.py  test_dg_tools.cpp  test_history_recorder.py  test_memory_replay.py  test_operator.py  test_previous_value.py  test_se3_offset.py  test_traj_generator.py  test_upsampler.py  test_vector_integrator.py
