<?xml version="1.0"?>
<package>
  <name>dg_tools</name>
  <version>1.0.0</version>
  <description>
    This project implements a small example when using the dynamic graph
  </description>
  <author email="mnaveau@tue.mpg.de">Maximilien Naveau</author>
  <maintainer email="mnaveau@tue.mpg.de">Maximilien Naveau</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

<!-- Message dependencies -->
  <build_depend>mpi_cmake_modules</build_depend>
  <run_depend>  mpi_cmake_modules</run_depend>

</package>
