<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>


<package format="3">

    <name>dg_tools</name>
    <version>1.0.0</version>
    
    <description>
        Controllers and small entities developped in the dynamic-graph
        framework.
    </description>

    <maintainer email="vberenz@tue.mpg.de">Vincent Berenz</maintainer>
    <maintainer email="mnaveau@tue.mpg.de">Maximilien Naveau</maintainer>

    <license>BSD-3-clause</license>

    <!-- Build tools -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <buildtool_depend>mpi_cmake_modules</buildtool_depend>
    
    <!-- Dependencies -->
    <depend>dynamic-graph</depend>
    <depend>dynamic-graph-python</depend>
    <depend>yaml_utils</depend>
    <depend>Eigen3</depend>
    <depend>eigen-quadprog</depend>

    <!-- Unit tests -->
    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_cmake_nose</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
